<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:textStyle="bold"
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <RatingBar
                android:id="@+id/item_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="false" />


        </LinearLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ingredients"
                android:textSize="@dimen/textMedium" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/string1"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/string2"
                android:textSize="@dimen/textMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/string3"
                android:textSize="@dimen/textMedium" />


        </LinearLayout>



        <TextView
            android:id="@+id/orderNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="@dimen/textMedium"
            android:background="@drawable/rounded_bgcolor"
            android:padding="10dp"
            android:text="@string/order_now"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_above="@id/orderNow"
            android:id="@+id/addRemoveLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add_large" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/no_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>

            <ImageButton
                android:layout_marginLeft="30dp"
                android:id="@+id/remove_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_remove_large" />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>